Fix wrapping "Document Date"

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -12,3 +12,9 @@ html, body {
         width: 10%; /* Reduce width of logo container */
     }
 }
+
+@media (min-width: 40.0625em) {
+    .govuk-summary-list__key {
+        width: 35%; /* Increase width of key column */
+    }
+}
